syntax = "proto3";

package devops_platform.endpoint;
option go_package="auth/apps/endpoint";

import "mcube/pb/resource/meta.proto";

message EndpointSpec {
    // 服务名称
    // @gotags: json:"service" bson:"service"
    string service = 1;
    // 服务资源名称
    // @gotags: json:"resoruce" bson:"resoruce"
    string resoruce = 4;
    // 服务资源的操作
    // @gotags: json:"action" bson:"action"
    string action = 5;
    // 功能的路劲: post.url
    // @gotags: json:"path" bson:"path"
    string path = 2;
    // 功能描述
    // @gotags: json:"descrption" bson:"descrption"
    string descrption = 3;
}

message EndpointSpecSet {
    // 服务功能列表
    // @gotags: json:"items" bson:"items"
    repeated EndpointSpec items = 1;
}

message Endpoint {
    // 元数据信息
    // @gotags: json:"meta" bson:",inline"
    infraboard.mcube.resource.Meta meta = 1;
    // Endpint定义
    // @gotags: json:"spec" bson:",inline"
    EndpointSpec spec = 2;
}

message EndpointSet {
    // 服务功能列表
    // @gotags: json:"items" bson:"items"
    repeated Endpoint items = 1;
}